--- a/js-2/calculator/calculator.css
+++ b/js-2/calculator/calculator.css
@@ -48,4 +48,6 @@ button:hover {
     justify-content: flex-end;
     padding-right: 10px;
     border-radius: 20px 0 0 0;
+    word-wrap: break-word;
+    word-break: break-all;
 }
