--- a/js-2/calculator/calculator.css
+++ b/js-2/calculator/calculator.css
@@ -46,7 +46,7 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding-right: 10px;
+    padding: 10px;
     border-radius: 20px 0 0 0;
     word-wrap: break-word;
     word-break: break-all;
